modules/vpc/main.tf
resource "google_compute_network" "vpc_network" {
  name                    = var.vpc_name
  auto_create_subnetworks = false
  routing_mode            = "REGIONAL"
}
 
resource "google_compute_subnetwork" "subnet" {
  count         = length(var.subnets)
  name          = var.subnets[count.index].name
  ip_cidr_range = var.subnets[count.index].cidr
  region        = var.subnets[count.index].region
  network       = google_compute_network.vpc_network.id
 
 
dynamic "secondary_ip_range" {
    for_each = var.subnets[count.index].name == "subnet-two" ? var.secondary_ip_range : []
    content {
      range_name    = secondary_ip_range.value.range_name
      ip_cidr_range = secondary_ip_range.value.ip_cidr_range
    }
  }
 
}
 
resource "google_compute_firewall" "default" {
  name    = "${var.vpc_name}-allow-internal"
  network = google_compute_network.vpc_network.name
 
  allow {
    protocol = "icmp"
  }
 
  allow {
    protocol = "tcp"
    ports    = ["22", "80", "443"]
  }
 
  source_ranges = ["10.0.0.0/8"]
  direction     = "INGRESS"
}
 
# 0.0.0.0/0 is the internet
# 🔐 SSH access rule (tag-based)
resource "google_compute_firewall" "ssh" {
  name    = "${var.vpc_name}-allow-ssh"
  network = google_compute_network.vpc_network.name
 
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
 
  source_ranges = ["0.0.0.0/0"]
  direction     = "INGRESS"
  target_tags   = ["ssh-access"]
}
 
# 🌐 HTTP access rule (tag-based)
resource "google_compute_firewall" "http" {
  name    = "${var.vpc_name}-allow-http"
  network = google_compute_network.vpc_network.name
 
  allow {
    protocol = "tcp"
    ports    = ["80"]
  }
 
  source_ranges = ["0.0.0.0/0"]
  direction     = "INGRESS"
  target_tags   = ["web"]
}
 
# 🌐 HTTPS access rule (tag-based)
resource "google_compute_firewall" "https" {
  name    = "${var.vpc_name}-allow-https"
  network = google_compute_network.vpc_network.name
 
  allow {
    protocol = "tcp"
    ports    = ["443"]
  }
 
  source_ranges = ["0.0.0.0/0"]
  direction     = "INGRESS"
  target_tags   = ["secure-web"]
}
